Fixed overflow on carousel to hidden.

--- a/static/style.css
+++ b/static/style.css
@@ -200,6 +200,7 @@ img {
 .carousel {
   display: flex;
   flex-direction: row;
+  overflow: hidden;
 }
 
 .carousel-item {
